@@ -1,20 +1,17 @@
 package io.mosip.certify.services;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import io.mosip.certify.core.dto.CredentialConfigResponse;
-import io.mosip.certify.core.dto.CredentialConfigurationDTO;
-import io.mosip.certify.core.dto.CredentialConfigurationSupportedDTO;
-import io.mosip.certify.core.dto.CredentialIssuerMetadataDTO;
+import io.mosip.certify.core.dto.*;
 import io.mosip.certify.core.exception.CertifyException;
 import io.mosip.certify.core.exception.CredentialConfigException;
 import io.mosip.certify.entity.CredentialConfig;
-import io.mosip.certify.mapper.CredentialConfigMapper;
+import io.mosip.certify.entity.attributes.ClaimsDisplayFieldsConfigs;
+import io.mosip.certify.entity.attributes.CredentialSubjectParameters;
 import io.mosip.certify.repository.CredentialConfigRepository;
-import io.mosip.certify.utils.CredentialCacheKeyGenerator;
+import io.mosip.certify.utils.CredentialConfigMapper;
 import io.mosip.certify.validators.credentialconfigvalidators.LdpVcCredentialConfigValidator;
 import io.mosip.certify.validators.credentialconfigvalidators.MsoMdocCredentialConfigValidator;
 import io.mosip.certify.validators.credentialconfigvalidators.SdJwtCredentialConfigValidator;
-import org.checkerframework.checker.units.qual.C;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
@@ -68,24 +65,28 @@ public class CredentialConfigurationServiceImplTest {
         credentialConfig.setScope("test_vc_ldp");
         credentialConfig.setCryptographicBindingMethodsSupported(List.of("did:jwk"));
         credentialConfig.setCredentialSigningAlgValuesSupported(List.of("Ed25519Signature2020"));
-        credentialConfig.setCredentialSubject(Map.of("name", "Full Name"));
+        credentialConfig.setCredentialSubject(Map.of("name", new CredentialSubjectParameters(List.of(new CredentialSubjectParameters.Display("Full Name", "en")))));
         credentialConfig.setKeyManagerAppId("TEST2019");
+        credentialConfig.setSignatureCryptoSuite("Ed25519Signature2020");
 
         credentialConfigurationDTO = new CredentialConfigurationDTO();
         credentialConfigurationDTO.setCredentialConfigKeyId("test-credential");
-        credentialConfigurationDTO.setDisplay(List.of());
+        credentialConfigurationDTO.setMetaDataDisplay(List.of());
         credentialConfigurationDTO.setVcTemplate("test_template");
         credentialConfigurationDTO.setCredentialFormat("test_vc");
-        credentialConfigurationDTO.setContext(List.of("https://www.w3.org/2018/credentials/v1"));
-        credentialConfigurationDTO.setCredentialType(Arrays.asList("VerifiableCredential", "TestVerifiableCredential"));
-        credentialConfigurationDTO.setCredentialSubject(Map.of("name", "Full Name"));
+        credentialConfigurationDTO.setContextURLs(List.of("https://www.w3.org/2018/credentials/v1"));
+        credentialConfigurationDTO.setCredentialTypes(Arrays.asList("VerifiableCredential", "TestVerifiableCredential"));
+        credentialConfigurationDTO.setCredentialSubjectDefinition(Map.of("name", new CredentialSubjectParametersDTO(List.of(new CredentialSubjectParametersDTO.Display("Full Name", "en")))));
 
         ReflectionTestUtils.setField(credentialConfigurationService, "credentialIssuer", "http://example.com/");
-        ReflectionTestUtils.setField(credentialConfigurationService, "credentialIssuerDomainUrl", "http://example.com/");
-        ReflectionTestUtils.setField(credentialConfigurationService, "authServers", List.of("http://auth.com"));
+        ReflectionTestUtils.setField(credentialConfigurationService, "authUrlList", List.of("http://auth.com"));
         ReflectionTestUtils.setField(credentialConfigurationService, "servletPath", "v1/test");
         ReflectionTestUtils.setField(credentialConfigurationService, "pluginMode", "DataProvider");
         ReflectionTestUtils.setField(credentialConfigurationService, "issuerDisplay", List.of(Map.of()));
+        ReflectionTestUtils.setField(credentialConfigurationService, "credentialStatusSupportedPurposes", List.of("test_purpose"));
+        ReflectionTestUtils.setField(credentialConfigurationService, "cryptographicBindingMethodsSupportedMap", new LinkedHashMap<>());
+        ReflectionTestUtils.setField(credentialConfigurationService, "credentialSigningAlgValuesSupportedMap", new LinkedHashMap<>());
+        ReflectionTestUtils.setField(credentialConfigurationService, "proofTypesSupported", new LinkedHashMap<>());
     }
 
     @Test
@@ -102,7 +103,7 @@ public class CredentialConfigurationServiceImplTest {
     }
 
     @Test
-    public void addCredentialConfiguration_DataProviderMode_VcTemplateNull_ThrowsException() throws Exception {
+    public void addCredentialConfiguration_DataProviderMode_VcTemplateNull_ThrowsException() {
         // Arrange
         ReflectionTestUtils.setField(credentialConfigurationService, "pluginMode", "DataProvider");
         CredentialConfigurationDTO dto = new CredentialConfigurationDTO();
@@ -115,30 +116,30 @@ public class CredentialConfigurationServiceImplTest {
         CertifyException exception = assertThrows(CertifyException.class, () ->
                 credentialConfigurationService.addCredentialConfiguration(dto)
         );
-        org.junit.Assert.assertEquals("Credential Template is mandatory for this `DataProvider` plugin issuer.", exception.getMessage());
+        org.junit.Assert.assertEquals("Credential Template is mandatory for the DataProvider plugin issuer.", exception.getMessage());
     }
 
     @Test
-    public void getCredentialConfigById_Success() throws JsonProcessingException {
+    public void getCredentialConfigById_Success() {
         Optional<CredentialConfig> optional = Optional.of(credentialConfig);
-        when(credentialConfigRepository.findById(anyString())).thenReturn(optional);
+        when(credentialConfigRepository.findByCredentialConfigKeyId(anyString())).thenReturn(optional);
         when(credentialConfigMapper.toDto(any(CredentialConfig.class))).thenReturn(credentialConfigurationDTO);
         CredentialConfigurationDTO credentialConfigurationDTOResponse = credentialConfigurationService.getCredentialConfigurationById("test");
 
         Assert.assertNotNull(credentialConfigurationDTOResponse);
-        Assert.assertNotNull(credentialConfigurationDTOResponse.getCredentialType());
+        Assert.assertNotNull(credentialConfigurationDTOResponse.getCredentialTypes());
         Assert.assertNotNull(credentialConfigurationDTOResponse.getCredentialFormat());
-        Assert.assertNotNull(credentialConfigurationDTOResponse.getContext());
+        Assert.assertNotNull(credentialConfigurationDTOResponse.getContextURLs());
         Assert.assertNotNull(credentialConfigurationDTOResponse.getVcTemplate());
         Assert.assertEquals("test_template", credentialConfigurationDTOResponse.getVcTemplate());
-        Assert.assertEquals(List.of("https://www.w3.org/2018/credentials/v1"), credentialConfigurationDTOResponse.getContext());
-        Assert.assertEquals(Arrays.asList("VerifiableCredential", "TestVerifiableCredential"), credentialConfigurationDTOResponse.getCredentialType());
+        Assert.assertEquals(List.of("https://www.w3.org/2018/credentials/v1"), credentialConfigurationDTOResponse.getContextURLs());
+        Assert.assertEquals(Arrays.asList("VerifiableCredential", "TestVerifiableCredential"), credentialConfigurationDTOResponse.getCredentialTypes());
         Assert.assertEquals("test_vc", credentialConfigurationDTOResponse.getCredentialFormat());
     }
 
     @Test
     public void getCredentialConfigurationById_ConfigNotFound() {
-        when(credentialConfigRepository.findById("12345678"))
+        when(credentialConfigRepository.findByCredentialConfigKeyId("12345678"))
                 .thenReturn(Optional.empty());
 
         CredentialConfigException exception = assertThrows(CredentialConfigException.class, () ->
@@ -151,8 +152,7 @@ public class CredentialConfigurationServiceImplTest {
     public void getCredentialConfigurationById_ConfigNotActive_ThrowsException() {
         CredentialConfig inactiveConfig = new CredentialConfig();
         inactiveConfig.setStatus("inactive"); // Not Constants.ACTIVE
-        when(credentialConfigRepository.findById(anyString())).thenReturn(Optional.of(inactiveConfig));
-
+        when(credentialConfigRepository.findByCredentialConfigKeyId(anyString())).thenReturn(Optional.of(inactiveConfig));
         CertifyException exception = assertThrows(CertifyException.class, () ->
                 credentialConfigurationService.getCredentialConfigurationById("test-id")
         );
@@ -163,13 +163,19 @@ public class CredentialConfigurationServiceImplTest {
     public void updateExistingCredentialConfig_Success() throws JsonProcessingException {
 
         CredentialConfig mockCredentialConfig = new CredentialConfig();
-        String expectedId = "12345678";
+        String expectedId = "test-credential";
         String expectedStatus = "active"; // This status should be what you expect after the "update"
-        mockCredentialConfig.setConfigId(expectedId);
+        mockCredentialConfig.setConfigId("12345678");
+        mockCredentialConfig.setCredentialConfigKeyId("test-credential");
         mockCredentialConfig.setStatus(expectedStatus);
+        mockCredentialConfig.setVcTemplate("some_template");
+        mockCredentialConfig.setCredentialFormat("vc+sd-jwt");
+        mockCredentialConfig.setSdJwtVct("test-vct");
+        mockCredentialConfig.setSignatureAlgo("ES256");
+
 
         Optional<CredentialConfig> optionalConfig = Optional.of(mockCredentialConfig);
-        when(credentialConfigRepository.findById(eq(expectedId))).thenReturn(optionalConfig);
+        when(credentialConfigRepository.findByCredentialConfigKeyId(eq(expectedId))).thenReturn(optionalConfig);
 
 
         CredentialConfigurationDTO mockDto = new CredentialConfigurationDTO(); // Dummy DTO for the mapper call
@@ -191,14 +197,14 @@ public class CredentialConfigurationServiceImplTest {
         Assert.assertEquals(expectedStatus, credentialConfigResponse.getStatus());
 
         // Verify interactions
-        verify(credentialConfigRepository).findById(eq(expectedId));
+        verify(credentialConfigRepository).findByCredentialConfigKeyId(eq(expectedId));
         verify(credentialConfigMapper).updateEntityFromDto(eq(mockDto), eq(mockCredentialConfig));
         verify(credentialConfigRepository).save(eq(mockCredentialConfig));
     }
 
     @Test
     public void updateExistingCredentialConfiguration_ConfigNotFound() {
-        when(credentialConfigRepository.findById(anyString()))
+        when(credentialConfigRepository.findByCredentialConfigKeyId(anyString()))
                 .thenReturn(Optional.empty());
 
         CredentialConfigException exception = assertThrows(CredentialConfigException.class, () ->
@@ -208,9 +214,9 @@ public class CredentialConfigurationServiceImplTest {
     }
 
     @Test
-    public void deleteCredentialConfig_Success() throws JsonProcessingException {
+    public void deleteCredentialConfig_Success() {
         Optional<CredentialConfig> optional = Optional.of(credentialConfig);
-        when(credentialConfigRepository.findById(anyString())).thenReturn(optional);
+        when(credentialConfigRepository.findByCredentialConfigKeyId(anyString())).thenReturn(optional);
         doNothing().when(credentialConfigRepository).delete(any(CredentialConfig.class));
         String result = credentialConfigurationService.deleteCredentialConfigurationById("12345678");
 
@@ -220,7 +226,7 @@ public class CredentialConfigurationServiceImplTest {
 
     @Test
     public void deleteCredentialConfiguration_ConfigNotFound() {
-        when(credentialConfigRepository.findById(anyString()))
+        when(credentialConfigRepository.findByCredentialConfigKeyId(anyString()))
                 .thenReturn(Optional.empty());
 
         CredentialConfigException exception = assertThrows(CredentialConfigException.class, () ->
@@ -253,6 +259,55 @@ public class CredentialConfigurationServiceImplTest {
         // Verify mapping was called
         verify(credentialConfigRepository).findAll();
         verify(credentialConfigMapper).toDto(credentialConfig);
+    }
+
+    @Test
+    public void fetchCredentialIssuerMetadata_SigningAlgValuesSupported_UsesSignatureAlgo_WhenCryptoSuiteIsNull() {
+        CredentialConfig config = new CredentialConfig();
+        config.setConfigId(UUID.randomUUID().toString());
+        config.setCredentialConfigKeyId("test-credential");
+        config.setStatus("active");
+        config.setCredentialFormat("ldp_vc");
+        config.setSignatureCryptoSuite(null); // triggers else branch
+        config.setSignatureAlgo("ES256");
+        config.setCredentialSubject(null);
+
+        when(credentialConfigRepository.findAll()).thenReturn(List.of(config));
+        CredentialConfigurationDTO dto = new CredentialConfigurationDTO();
+        dto.setCredentialFormat("ldp_vc");
+        when(credentialConfigMapper.toDto(config)).thenReturn(dto);
+
+
+        CredentialIssuerMetadataDTO result = credentialConfigurationService.fetchCredentialIssuerMetadata("latest");
+
+        Assert.assertNotNull(result);
+        Assert.assertTrue(result.getCredentialConfigurationSupportedDTO().containsKey("test-credential"));
+        CredentialConfigurationSupportedDTO supportedDTO = result.getCredentialConfigurationSupportedDTO().get("test-credential");
+        Assert.assertEquals(List.of("ES256"), supportedDTO.getCredentialSigningAlgValuesSupported());
+    }
+
+    @Test
+    public void fetchCredentialIssuerMetadata_SigningAlgValuesSupported_UsesSignatureAlgo_WhenCryptoSuiteIsNull_SdJwtFormat() {
+        CredentialConfig config = new CredentialConfig();
+        config.setConfigId(UUID.randomUUID().toString());
+        config.setCredentialConfigKeyId("sdjwt-credential");
+        config.setStatus("active");
+        config.setCredentialFormat("vc+sd-jwt");
+        config.setSignatureCryptoSuite(null); // triggers else branch
+        config.setSignatureAlgo("ES256");
+        config.setSdJwtVct("test-vct");
+
+        when(credentialConfigRepository.findAll()).thenReturn(List.of(config));
+        CredentialConfigurationDTO dto = new CredentialConfigurationDTO();
+        dto.setCredentialFormat("vc+sd-jwt");
+        when(credentialConfigMapper.toDto(config)).thenReturn(dto);
+
+        CredentialIssuerMetadataDTO result = credentialConfigurationService.fetchCredentialIssuerMetadata("latest");
+
+        Assert.assertNotNull(result);
+        Assert.assertTrue(result.getCredentialConfigurationSupportedDTO().containsKey("sdjwt-credential"));
+        CredentialConfigurationSupportedDTO supportedDTO = result.getCredentialConfigurationSupportedDTO().get("sdjwt-credential");
+        Assert.assertEquals(List.of("ES256"), supportedDTO.getCredentialSigningAlgValuesSupported());
     }
 
     @Test
@@ -316,7 +371,7 @@ public class CredentialConfigurationServiceImplTest {
 
         // Verify no mapping calls
         verify(credentialConfigRepository).findAll();
-        verify(credentialConfigMapper, never()).toDto(any());
+        verify(credentialConfigMapper, never()).toDto((CredentialConfig) any());
     }
 
     @Test
@@ -328,7 +383,7 @@ public class CredentialConfigurationServiceImplTest {
 
         mdocConfig.setStatus("active");
         mdocConfig.setCredentialFormat("mso_mdoc");
-        mdocConfig.setClaims(Map.of("firstName", "First Name", "lastName", "Last Name"));
+        mdocConfig.setMsoMdocClaims(Map.of("firstName", Map.of( "First Name", new ClaimsDisplayFieldsConfigs(List.of(new ClaimsDisplayFieldsConfigs.Display("Test","en"))))));
         mdocConfig.setDocType("docType1");
 
         List<CredentialConfig> credentialConfigList = List.of(mdocConfig);
@@ -339,7 +394,7 @@ public class CredentialConfigurationServiceImplTest {
         mdocDTO.setCredentialFormat("mso_mdoc");
         mdocDTO.setCredentialConfigKeyId("mdoc-credential");
         mdocDTO.setScope("mdoc_scope");
-        mdocDTO.setClaims(Map.of("firstName", "First Name", "lastName", "Last Name"));
+        mdocDTO.setMsoMdocClaims(Map.of("firstName", Map.of( "First Name", new ClaimsDisplayFieldsConfigDTO(List.of(new ClaimsDisplayFieldsConfigDTO.Display("Test","en"))))));
         mdocDTO.setDocType("docType1");
 
         when(credentialConfigMapper.toDto(mdocConfig)).thenReturn(mdocDTO);
@@ -350,6 +405,7 @@ public class CredentialConfigurationServiceImplTest {
         // Verify MSO_MDOC configuration
         Assert.assertNotNull(result.getCredentialConfigurationSupportedDTO());
         Assert.assertEquals(1, result.getCredentialConfigurationSupportedDTO().size());
+        Assert.assertEquals(Map.of("firstName", Map.of( "First Name", new ClaimsDisplayFieldsConfigs(List.of(new ClaimsDisplayFieldsConfigs.Display("Test","en"))))), result.getCredentialConfigurationSupportedDTO().get("mdoc-credential").getClaims());
 
         CredentialConfigurationSupportedDTO supportedDTO = result.getCredentialConfigurationSupportedDTO().get("mdoc-credential");
         Assert.assertNotNull(supportedDTO);
@@ -370,6 +426,7 @@ public class CredentialConfigurationServiceImplTest {
         mdocConfig.setVcTemplate("mdoc_template");
         mdocConfig.setCredentialFormat("mso_mdoc");
         mdocConfig.setDocType("docType1");
+        mdocConfig.setSignatureCryptoSuite("Ed25519Signature2020");
 
         CredentialConfigurationDTO mdocDTO = new CredentialConfigurationDTO();
         mdocDTO.setCredentialFormat("mso_mdoc");
@@ -385,7 +442,7 @@ public class CredentialConfigurationServiceImplTest {
 
         Assert.assertNotNull(response);
         Assert.assertEquals("active", response.getStatus());
-        Assert.assertEquals(mdocConfig.getConfigId(), response.getId());
+        Assert.assertEquals(mdocConfig.getCredentialConfigKeyId(), response.getId());
     }
 
     @Test
@@ -397,6 +454,7 @@ public class CredentialConfigurationServiceImplTest {
         sdJwtConfig.setStatus("active");
         sdJwtConfig.setCredentialFormat("vc+sd-jwt");
         sdJwtConfig.setSdJwtVct("test-vct");
+        sdJwtConfig.setSignatureAlgo("ES256");
 
         CredentialConfigurationDTO sdJwtDTO = new CredentialConfigurationDTO();
         sdJwtDTO.setCredentialFormat("vc+sd-jwt");
@@ -411,20 +469,21 @@ public class CredentialConfigurationServiceImplTest {
 
         Assert.assertNotNull(response);
         Assert.assertEquals("active", response.getStatus());
-        Assert.assertEquals(sdJwtConfig.getConfigId(), response.getId());
+        Assert.assertEquals(sdJwtConfig.getCredentialConfigKeyId(), response.getId());
     }
 
     @Test
     public void validateCredentialConfiguration_LdpVc_Invalid_ThrowsException() {
         CredentialConfig config = new CredentialConfig();
         config.setCredentialFormat("ldp_vc");
+        config.setVcTemplate("test_template");
         // Simulate invalid config
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
             mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(config)).thenReturn(false);
             CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config)
+                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config, true)
             );
-            assertEquals("Context and credentialType are mandatory for ldp_vc format", ex.getMessage());
+            assertEquals("Context, credentialType and signatureCryptoSuite are mandatory for ldp_vc format", ex.getMessage());
         }
     }
 
@@ -432,11 +491,12 @@ public class CredentialConfigurationServiceImplTest {
     public void validateCredentialConfiguration_LdpVc_Duplicate_ThrowsException() {
         CredentialConfig config = new CredentialConfig();
         config.setCredentialFormat("ldp_vc");
+        config.setVcTemplate("test_template");
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
             mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(config)).thenReturn(true);
             mocked.when(() -> LdpVcCredentialConfigValidator.isConfigAlreadyPresent(eq(config), any())).thenReturn(true);
             CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config)
+                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config, true)
             );
             assertEquals("Configuration already exists for the given context and credentialType", ex.getMessage());
         }
@@ -446,12 +506,13 @@ public class CredentialConfigurationServiceImplTest {
     public void validateCredentialConfiguration_MsoMdoc_Invalid_ThrowsException() {
         CredentialConfig config = new CredentialConfig();
         config.setCredentialFormat("mso_mdoc");
+        config.setVcTemplate("test_template");
         try (var mocked = org.mockito.Mockito.mockStatic(MsoMdocCredentialConfigValidator.class)) {
             mocked.when(() -> MsoMdocCredentialConfigValidator.isValidCheck(config)).thenReturn(false);
             CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config)
+                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config, true)
             );
-            assertEquals("Doctype field is mandatory for mso_mdoc", ex.getMessage());
+            assertEquals("Doctype and signatureCryptoSuite fields are mandatory for mso_mdoc format", ex.getMessage());
         }
     }
 
@@ -459,11 +520,12 @@ public class CredentialConfigurationServiceImplTest {
     public void validateCredentialConfiguration_MsoMdoc_Duplicate_ThrowsException() {
         CredentialConfig config = new CredentialConfig();
         config.setCredentialFormat("mso_mdoc");
+        config.setVcTemplate("test_template");
         try (var mocked = org.mockito.Mockito.mockStatic(MsoMdocCredentialConfigValidator.class)) {
             mocked.when(() -> MsoMdocCredentialConfigValidator.isValidCheck(config)).thenReturn(true);
             mocked.when(() -> MsoMdocCredentialConfigValidator.isConfigAlreadyPresent(eq(config), any())).thenReturn(true);
             CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config)
+                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config, true)
             );
             assertEquals("Configuration already exists for the given doctype", ex.getMessage());
         }
@@ -473,12 +535,13 @@ public class CredentialConfigurationServiceImplTest {
     public void validateCredentialConfiguration_SdJwt_Invalid_ThrowsException() {
         CredentialConfig config = new CredentialConfig();
         config.setCredentialFormat("vc+sd-jwt");
+        config.setVcTemplate("test_template");
         try (var mocked = org.mockito.Mockito.mockStatic(SdJwtCredentialConfigValidator.class)) {
             mocked.when(() -> SdJwtCredentialConfigValidator.isValidCheck(config)).thenReturn(false);
             CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config)
+                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config,true)
             );
-            assertEquals("Vct field is mandatory for vc+sd-jwt", ex.getMessage());
+            assertEquals("Vct and signatureAlgo fields are mandatory for vc+sd-jwt format", ex.getMessage());
         }
     }
 
@@ -486,11 +549,12 @@ public class CredentialConfigurationServiceImplTest {
     public void validateCredentialConfiguration_SdJwt_Duplicate_ThrowsException() {
         CredentialConfig config = new CredentialConfig();
         config.setCredentialFormat("vc+sd-jwt");
+        config.setVcTemplate("test_template");
         try (var mocked = org.mockito.Mockito.mockStatic(SdJwtCredentialConfigValidator.class)) {
             mocked.when(() -> SdJwtCredentialConfigValidator.isValidCheck(config)).thenReturn(true);
             mocked.when(() -> SdJwtCredentialConfigValidator.isConfigAlreadyPresent(eq(config), any())).thenReturn(true);
             CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config)
+                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config, true)
             );
             assertEquals("Configuration already exists for the given vct", ex.getMessage());
         }
@@ -500,9 +564,29 @@ public class CredentialConfigurationServiceImplTest {
     public void validateCredentialConfiguration_UnsupportedFormat_ThrowsException() {
         CredentialConfig config = new CredentialConfig();
         config.setCredentialFormat("unsupported_format");
+        config.setVcTemplate("test_template");
         CertifyException ex = assertThrows(CertifyException.class, () ->
-                ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config)
+                ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config, false)
         );
         assertEquals("Unsupported format: unsupported_format", ex.getMessage());
+    }
+
+    @Test
+    public void validateCredentialConfiguration_LdpVc_MissingSignatureAlgo_ThrowsException() {
+        CredentialConfig config = new CredentialConfig();
+        config.setCredentialFormat("ldp_vc");
+        config.setVcTemplate("test_template");
+        config.setSignatureCryptoSuite("ecdsa-rdfc-2019");
+        config.setSignatureAlgo("");
+
+        try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
+            mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(config)).thenReturn(true);
+            mocked.when(() -> LdpVcCredentialConfigValidator.isConfigAlreadyPresent(eq(config), any())).thenReturn(false);
+
+            CertifyException ex = assertThrows(CertifyException.class, () ->
+                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config, true)
+            );
+            assertEquals("Signature algorithm is mandatory for the provided crypto suite: ecdsa-rdfc-2019", ex.getMessage());
+        }
     }
 }
